[project]
name = "business-application-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.16.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]
